@@ -6,6 +6,8 @@
 
 #include <testfwk.h>
 
+#ifndef __SDCC_ds390
+
 void t(unsigned int i)
 {
 	i;
@@ -63,8 +65,11 @@ void t(unsigned int i)
 	return(v);
 }
 
+#endif
+
 void testBug(void)
 {
+#ifndef __SDCC_ds390
 	ASSERT(f(0x55aa55aa) == 0x55aa55aa);
 	ASSERT(f(0x0000ffff) == 0x0000ffff);
 	ASSERT(f(0xffff0001) == 0xffff0001);
@@ -76,5 +81,6 @@ void testBug(void)
 	ASSERT(h(0x55aa55aa) == 0x55aa55aa);
 	ASSERT(h(0x0000ffff) == 0x0000ffff);
 	ASSERT(h(0xffff0001) == 0xffff00ab);
+#endif
 }
 
